# cachewraith-server-monitoring

./: .gitignore  CMakeLists.txt  README.md  config.example.json
agent-go/: .env.example  README.md  config.example.json  go.mod
agent-go/cmd/agent/: main.go
agent-go/deploy/: monitor-agent.service.example
agent-go/internal/alert/: alert.go  cooldown.go  telegram.go
agent-go/internal/config/: config.go  config_test.go
agent-go/internal/logger/: logger.go
agent-go/internal/logtailer/: logtailer.go
agent-go/internal/monitor/: monitor.go  nginx.go  parser_test.go  resource.go  service.go  ssh.go  website.go
agent-go/scripts/: build-linux-amd64.sh  install-systemd.sh  uninstall-systemd.sh
docs/: alert-testing.md  architecture.md  configuration.md  development.md  installation.md  roadmap.md  security.md  telegram.md
include/cachewraith/alert/: Alert.h  AlertManager.h  CooldownManager.h  TelegramNotifier.h
include/cachewraith/app/: Application.h  Config.h
include/cachewraith/monitor/: CpuMonitor.h  DiskMonitor.h  IMonitor.h  RamMonitor.h  ServiceMonitor.h  WebsiteMonitor.h
include/cachewraith/security/: LogTailer.h  NginxLogMonitor.h  SshLogMonitor.h
include/cachewraith/util/: Env.h  Logger.h  StringUtils.h  Time.h
src/: main.cpp
src/alert/: AlertManager.cpp  CooldownManager.cpp  TelegramNotifier.cpp
src/app/: Application.cpp  Config.cpp
src/monitor/: CpuMonitor.cpp  DiskMonitor.cpp  RamMonitor.cpp  ServiceMonitor.cpp  WebsiteMonitor.cpp
src/security/: LogTailer.cpp  NginxLogMonitor.cpp  SshLogMonitor.cpp
src/util/: Env.cpp  Logger.cpp  StringUtils.cpp  Time.cpp
systemd/: cachewraith-monitor.service
tests/: parser_tests.cpp
